version-23.2/reference/rpk/rpk-cloud/rpk-cloud-login.mdx
---
title: rpk cloud login
rpk_version: v23.2.1
---

<head>
  <meta name="title" content="rpk cloud login| Redpanda Docs" />
  <meta name="description" content="rpk cloud login" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-cloud/rpk-cloud-login/" />
</head>

Log in to Redpanda Cloud.

This command checks for an existing Redpanda Cloud API token and, if present,
ensures it is still valid. If no token is found or the token is no longer valid,
this command will login and save your token along with the client ID used to
request the token.

## Login credentials

You may use either SSO or client credentials to log in.

### SSO

This will automatically launch your default web browser and prompt you to
authenticate via our Redpanda Cloud page. Once you have successfully
authenticated, you will be ready to use rpk cloud commands.

### Client credentials

Cloud client credentials can be used to login to Redpanda, they can be created
in the Clients tab of the Users section in the Redpanda Cloud online interface.
client credentials can be provided in three ways, in order of preference:

- In your rpk cloud auth, `client_id` and `client_secret` fields
- Through `RPK_CLOUD_CLIENT_ID` and `RPK_CLOUD_CLIENT_SECRET` environment variables
- Through the `--client-id` and `--client-secret` flags

If none of these are provided, rpk will use the SSO method to login.
If you specify environment variables or flags, they will not be synced to the
`rpk.yaml` file unless the `--save` flag is passed. The cloud authorization
token and client ID is always synced.

## Profile selection

This command by default attempts to populate a new profile that talks to a
cloud cluster for you. If you have an existing cloud profile, this will select
it, prompting which to use if you have many. If you have no cloud profile, this
command will prompt you to select one that exists in your organization. If you
want to disable automatic profile creation and selection, use `--no-profile`.

## Usage

```bash
rpk cloud login [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--client-id |string |The client ID of the organization in Redpanda
Cloud.

|--client-secret |string |The client secret of the organization in
Redpanda Cloud.

|-h, --help |- |Help for login.

|--no-profile |- |Skip automatic profile creation and any associated
prompts.

|--save |- |Save environment or flag specified client ID and client
secret to the configuration file.

|--config |string |Redpanda or rpk config file; default search paths are
~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X
help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===

-->
